Bug 123697 - Black border around writer document
Summary: Black border around writer document
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: iOS Editor (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: Other iOS
: medium trivial
Assignee: Not Assigned
URL:
Whiteboard: target:6.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2019-02-25 10:31 UTC by Nicolas Christener
Modified: 2019-06-03 14:17 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Black border around document (890.04 KB, image/png)
2019-02-25 10:32 UTC, Nicolas Christener
Details
Fadeout effect as reference (497.95 KB, image/png)
2019-02-25 10:33 UTC, Nicolas Christener
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas Christener 2019-02-25 10:31:44 UTC
Description:
In the iOS app a writer document always has a black border around the edges of the document. On the "desktop version" of LibreOffice there is a nice fade out effect which looks quite a bit more polished.

Could you consider changing this design aspect from a black line to the fade out style on iOS too?

Steps to Reproduce:
1. Open writer document on iOS
2. Check the edges of the document


Actual Results:
The edge is a black line.

Expected Results:
Fade out style like in the desktop app.


Reproducible: Always


User Profile Reset: No



Additional Info:
Please see attached screenshot.
Comment 1 Nicolas Christener 2019-02-25 10:32:29 UTC
Created attachment 149570 [details]
Black border around document

Black border instead of a fade out effect.
Comment 2 Nicolas Christener 2019-02-25 10:33:11 UTC
Created attachment 149571 [details]
Fadeout effect as reference

The desktop version shows a nice fadeout effect instead of a black border.
Comment 3 Aron Budea 2019-03-13 00:11:46 UTC
Confirmed with version 0.1 (20).
Comment 4 How can I remove my account? 2019-05-03 11:18:47 UTC
Code pointers: The shadow is painted in SwPageFrame::PaintBorderAndShadow() in sw/source/core/layout/paintfrm.cxx . The shadow gradient thing comes from the sw/res/page-shadow-mask.png in the images_colibre.zip. But something is broken in the handling of that.
Comment 5 How can I remove my account? 2019-05-03 12:43:20 UTC
I wonder whether it would be good enough for now to simply not draw any border at all in the iOS case?
Comment 6 Aron Budea 2019-05-21 00:54:30 UTC
Interestingly this affected online in general back in the day, and the following commit helped, perhaps this gives a clue what might be different in the iOS case:
https://cgit.freedesktop.org/libreoffice/core/commit/?id=c1774eb6a34d68b8a083ce1e919d634b700583c4
Comment 7 How can I remove my account? 2019-05-21 07:07:40 UTC
That commit is about use of cairo, though, and we don't use cairo on iOS (or macOS).
Comment 8 Commit Notification 2019-06-03 05:48:07 UTC
Tomaž Vajngerl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/95462a02a3aee1e3e7f9aa8fc50ba25fee3fa592%5E%21

tdf#123697 we need to create a bitmap context with alpha

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 How can I remove my account? 2019-06-03 14:17:31 UTC
Fixed by Tomaž's commit, resolving.