tdf#123697 we need to create a bitmap context with alpha

Change-Id: Ib934314e56163983e70a0b04eb667e6b8527c783
Reviewed-on: https://gerrit.libreoffice.org/73362
Tested-by: Jenkins
Reviewed-by: Tomaž Vajngerl <quikee@gmail.com>